kubernetes/db-phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-myadmin 
  labels:
    app: php-myadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: php-myadmin
  template:
    metadata:
      labels:
        app: php-myadmin
    spec:
      containers:
      - name: php-myadmin
        image: phpmyadmin
        ports:
        - containerPort: 8081
