kubernetes/app-java-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-svc 
spec: 
  selector:
    app: java-app 
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
