kubernetes/svc-java-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-app
  name: java-app-svc
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: java-app
