kubernetes/ingress-java.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress 
  namespace: my-app
spec:
  ingressClassName: nginx
  rules:
  - host: a63b03a80b3594dac96a2648d164787a-1484154003.us-west-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-app-svc 
            port:
              number: 8080
